<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>br.eduprivate</groupId>
  <artifactId>cotra</artifactId>
  <version>0.0.1-SNAPSHOT</version>
	<properties>
		<maven.compiler.source>19</maven.compiler.source>
		<maven.compiler.target>19</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.apache.zookeeper</groupId>
			<artifactId>zookeeper</artifactId>
			<version>3.4.5</version>
			<exclusions>
            			<exclusion>
                			<groupId>com.sun.jmx</groupId>
                			<artifactId>jmxri</artifactId>
            			</exclusion>
            			<exclusion>
					<groupId>com.sun.jdmk</groupId>
                			<artifactId>jmxtools</artifactId>
            			</exclusion>
            			<exclusion>
                			<groupId>javax.jms</groupId>
                			<artifactId>jms</artifactId>
            			</exclusion>
        		</exclusions>
		</dependency>
		<dependency>
            <groupId>com.rabbitmq</groupId>
            <artifactId>amqp-client</artifactId>
            <version>3.1.3</version>
            <type>jar</type>
		</dependency>
		<dependency>
		    <groupId>org.apache.lucene</groupId>
		    <artifactId>lucene-core</artifactId>
		    <version>7.1.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.lucene</groupId>
		    <artifactId>lucene-analyzers-common</artifactId>
		    <version>7.1.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.lucene</groupId>
		    <artifactId>lucene-queryparser</artifactId>
		    <version>7.1.0</version>
		</dependency>
		<dependency>
		    <groupId>javax.servlet</groupId>
		    <artifactId>javax.servlet-api</artifactId>
		    <version>3.1.0</version>
		    <scope>provided</scope>
		</dependency>
	</dependencies>
  
</project>